page acceuil, manque condition pour les coeurs

--- a/index.html
+++ b/index.html
@@ -48,51 +48,68 @@
     <section id="restaurants">
         <h2>restaurants</h2>
         <div class="card">
+            <a href="#">
             <img src="assets/img/paletteDuGout.jpg" alt="photo de plat, la palette du goût">
             <p class="card__nouveau">Nouveau</p>
             <div class="card__text">
+                <div>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
+                </div>
                 <!-- icone coeur cliquable -->
+                <i class="fas fa-heart"></i>
                 <i class="far fa-heart"></i>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="#">
             <img src="assets/img/noteEnchantee.jpg" alt="photo de plat, la note enchantée">
             <p class="card__nouveau">Nouveau</p>
             <div class="card__text">
+                <div>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
+                </div>
                 <!-- icone coeur cliquable -->
                 <i class="far fa-heart"></i>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="#">
             <img src="assets/img/laFrancaise.jpg" alt="photo de plat, à la française">
             <div class="card__text">
+                <div>
                 <h3>À la française</h3>
                 <p>Cité Rouge</p>
+                </div>
                 <!-- icone coeur cliquable -->
                 <i class="far fa-heart"></i>
             </div>
+            </a>
         </div>
         <div class="card">
+            <a href="#">
             <img src="assets/img/deliceDesSens.jpg" alt="photo de plat, le délice des sens">
             <div class="card__text">
+                <div>
                 <h3>Le délice des sens</h3>
                 <p>Folie-méricourt</p>
+                </div>
                 <!-- icone coeur cliquable -->
                 <i class="far fa-heart"></i>
             </div>
+            </a>
         </div>
 
     </section>
 
-    <footer>
-        <h3></h3>
-        <div>
-            <p></p>
-            <p></p>
+    <footer class="footer">
+        <img src="./assets/img/ohmyfood@2x.svg" alt="logo du site en blanc">
+        <div class="contact">
+            <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+            <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
             <p>Mentions légales</p>
             <a href="mailto:contact@ohmyfood.fr">contact</a>
         </div>
