page francaise rediger quelques details a corriger, autres pages generer non rempli

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="restaurants">
         <h2>restaurants</h2>
         <div class="card">
-            <a href="#">
+            <a href="la_palette_du_gout.html">
             <img src="assets/img/paletteDuGout.jpg" alt="photo de plat, la palette du goût">
             <p class="card__nouveau">Nouveau</p>
             <div class="card__text">
@@ -56,14 +56,14 @@
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
                 </div>
-                <!-- icone coeur cliquable -->
+                
                 <i class="fas fa-heart"></i>
                 <i class="far fa-heart"></i>
             </div>
             </a>
         </div>
         <div class="card">
-            <a href="#">
+            <a href="la_note_enchante.html">
             <img src="assets/img/noteEnchantee.jpg" alt="photo de plat, la note enchantée">
             <p class="card__nouveau">Nouveau</p>
             <div class="card__text">
@@ -77,7 +77,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="#">
+            <a href="a_la_francaise.html">
             <img src="assets/img/laFrancaise.jpg" alt="photo de plat, à la française">
             <div class="card__text">
                 <div>
@@ -90,7 +90,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="#">
+            <a href="le_delice_des_sens.html">
             <img src="assets/img/deliceDesSens.jpg" alt="photo de plat, le délice des sens">
             <div class="card__text">
                 <div>
@@ -105,7 +105,7 @@
 
     </section>
 
-    <footer class="footer">
+    <footer>
         <img src="./assets/img/ohmyfood@2x.svg" alt="logo du site en blanc">
         <div class="contact">
             <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
