remplissage des menus

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -113,6 +113,7 @@
                 </div>
                 </a>
             </div>
+            <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
 
