--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -9,6 +9,7 @@
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
+    <!--  restaurant ou menu                      ??? -->
     <title>Restaurant La note enchantée</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
         <img src="./assets/img/noteEnchantee.jpg" alt="Plat à la note enchantée">
         <div class="section__hors-img">
             <div class="section__titre">
-                <h1>À la française</h1>
+                <h1>La note enchantée</h1>
                 <i class="far fa-heart"></i>
             </div>
             <div class="menu">
@@ -28,8 +29,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <p>Aux zests d'orange</p>
+                        <h3>Ravioles de foie gras</h3>
+                        <p>Accompagnés de leur crème à la truffe</p>
                     </div>
                     <p>25€</p>
                 </div>
@@ -37,8 +38,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <p>Carotte, panais, topinambour</p>
+                        <h3>Caviar osciètre</h3>
+                        <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <p>35€</p>
                 </div>
@@ -46,20 +47,29 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Soupe à l'oignon</h3>
-                        <p>Revisitée</p>
+                        <h3>Homard et espuma de potiron</h3>
+                        <p>Mariné aux zestes d'orange</p>
                     </div>
                     <p>20€</p>
                 </div>
                 </a>
+                <a href="#">
+                    <div class="menu__plat">
+                        <div class="menu__plat--choix">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <p>35€</p>
+                    </div>
+                    </a>
             </div>
             <div class="menu">
                 <h2>Plats</h2>
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnées d'une purée de panais</p>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p>Sur lit de purée de céleri-rave</p>
                     </div>
                     <p>40€</p>
                 </div>
@@ -67,8 +77,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres</p>
+                        <h3>Langoustine poêlée</h3>
+                        <p>Purée de patate douce</p>
                     </div>
                     <p>35€</p>
                 </div>
@@ -76,8 +86,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h3>Mijoté de queue de boeuf</h3>
+                        <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <p>44€</p>
                 </div>
@@ -88,8 +98,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Pétales de violettes glacés</h3>
-                        <p>Et purée de noisettes</p>
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
                         <p>18€</p>
                 </div>
@@ -97,8 +107,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
+                        <h3>Baba au rhum revisité</h3>
+                        <p>Avec son coulis de citron</p>
                     </div>
                     <p>22€</p>
                 </div>
@@ -106,13 +116,14 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Millefeuille croustillant</h3>
-                        <p>myrtilles et pâtes d'amande</p>
+                        <h3>Tarte au citron meringuée</h3>
+                        <p>Déstructurée</p>
                     </div>
                     <p>23€</p>
                 </div>
                 </a>
             </div>
+            <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
 
