--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -20,7 +20,7 @@
         <img src="./assets/img/paletteDuGout.jpg" alt="Plat à la Palette du goût">
         <div class="section__hors-img">
             <div class="section__titre">
-                <h1>À la française</h1>
+                <h1>La palette du goût</h1>
                 <i class="far fa-heart"></i>
             </div>
             <div class="menu">
@@ -28,8 +28,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <p>Aux zests d'orange</p>
+                        <h3>Fricassée d'escargot</h3>
+                        <p>Au piment d'Espelette</p>
                     </div>
                     <p>25€</p>
                 </div>
@@ -37,8 +37,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <p>Carotte, panais, topinambour</p>
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
                     <p>35€</p>
                 </div>
@@ -46,8 +46,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Soupe à l'oignon</h3>
-                        <p>Revisitée</p>
+                        <h3>Oeuf au plat</h3>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <p>20€</p>
                 </div>
@@ -58,8 +58,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnées d'une purée de panais</p>
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <p>40€</p>
                 </div>
@@ -67,8 +67,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres</p>
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <p>35€</p>
                 </div>
@@ -76,8 +76,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h3>Filet de turbot</h3>
+                        <p>Aux agrumes</p>
                     </div>
                     <p>44€</p>
                 </div>
@@ -88,8 +88,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Pétales de violettes glacés</h3>
-                        <p>Et purée de noisettes</p>
+                        <h3>Paris-Brest</h3>
+                        <p>Revisité</p>
                     </div>
                         <p>18€</p>
                 </div>
@@ -97,8 +97,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
                     <p>22€</p>
                 </div>
@@ -106,13 +106,14 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Millefeuille croustillant</h3>
-                        <p>myrtilles et pâtes d'amande</p>
+                        <h3>Mousse au chocolat</h3>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <p>23€</p>
                 </div>
                 </a>
             </div>
+            <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
 
