--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -28,8 +28,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Tartare de poulpe acidulé</h3>
-                        <p>Aux zests d'orange</p>
+                        <h3>Tartare de thon</h3>
+                        <p>Assaisonné au yuzu</p>
                     </div>
                     <p>25€</p>
                 </div>
@@ -37,8 +37,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Velouté de légumes d'antan</h3>
-                        <p>Carotte, panais, topinambour</p>
+                        <h3>Bouchée de homard croustillant </h3>
+                        <p>Et sa farandole de petits légumes</p>
                     </div>
                     <p>35€</p>
                 </div>
@@ -46,8 +46,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Soupe à l'oignon</h3>
-                        <p>Revisitée</p>
+                        <h3>Velouté de cèpes </h3>
+                        <p>Aux truffes</p>
                     </div>
                     <p>20€</p>
                 </div>
@@ -58,8 +58,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnées d'une purée de panais</p>
+                        <h3>Poulet rôti aux herbes de Provence </h3>
+                        <p>Et sa crème de truffe</p>
                     </div>
                     <p>40€</p>
                 </div>
@@ -67,8 +67,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres</p>
+                        <h3>Langouste rôtie</h3>
+                        <p>Et ses légumes de saison</p>
                     </div>
                     <p>35€</p>
                 </div>
@@ -76,8 +76,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h3>Côte de boeuf Angus</h3>
+                        <p>Et sa purée de panais</p>
                     </div>
                     <p>44€</p>
                 </div>
@@ -88,8 +88,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Pétales de violettes glacés</h3>
-                        <p>Et purée de noisettes</p>
+                        <h3>Farandole de desserts</h3>
+                        <p>Du chef</p>
                     </div>
                         <p>18€</p>
                 </div>
@@ -97,8 +97,8 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Fondant au chocolat</h3>
-                        <p>Revisité</p>
+                        <h3>Crème brulée</h3>
+                        <p>Revisitée</p>
                     </div>
                     <p>22€</p>
                 </div>
@@ -106,16 +106,16 @@
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
-                        <h3>Millefeuille croustillant</h3>
-                        <p>myrtilles et pâtes d'amande</p>
+                        <h3>Tiramisu </h3>
+                        <p>À la noisette</p>
                     </div>
                     <p>23€</p>
                 </div>
                 </a>
             </div>
+            <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
-
     <footer class="footer">
         <img src="./assets/img/ohmyfood@2x.svg" alt="logo du site en blanc">
         <div class="contact">
