--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -94,7 +94,7 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Désserts</h2>
+                <h2>Desserts</h2>
                 <a href="#">
                 <div class="menu__plat">
                     <div class="menu__plat--choix">
