main.scss devenu styles.scss et quelques modifications et commentaire ajouter

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/main.css">
+    <link rel="stylesheet" type="text/css" href="sass/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
@@ -47,7 +47,7 @@
         </header>
         
         <section id="restaurants">
-            <h2>restaurants</h2>
+            <h2>Restaurants</h2>
             <div class="card">
                 <a href="la_palette_du_gout.html">
                     <img src="assets/img/paletteDuGout.jpg" alt="photo de plat, la palette du goût">
