--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/main.css">
+    <link rel="stylesheet" type="text/css" href="sass/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
