ajout effet affichage menu

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
@@ -24,9 +24,10 @@
                 <i class="far fa-heart"></i>
             </div>
             <div class="menu">
-                <h2>Entrées</h2>
+                <!-- titre de menu et trait       ???? -->
+                <h2>Entrées<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Tartare de poulpe acidulé</h3>
                         <p>Aux zests d'orange</p>
@@ -35,7 +36,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
@@ -44,7 +45,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
@@ -54,9 +55,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Plats</h2>
+                <h2>Plats<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Coquilles Saint-Jacques</h3>
                         <p>Accompagnées d'une purée de panais</p>
@@ -65,7 +66,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Magret de canard</h3>
                         <p>Et parmentier de pommes de terres</p>
@@ -74,7 +75,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Pigeonneau d'Illes-et-Vilaine</h3>
                         <p>Sur son lit de gnocchis aux légumes</p>
@@ -84,9 +85,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Desserts</h2>
+                <h2>Desserts<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Pétales de violettes glacés</h3>
                         <p>Et purée de noisettes</p>
@@ -95,7 +96,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Fondant au chocolat</h3>
                         <p>Revisité</p>
@@ -104,7 +105,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Millefeuille croustillant</h3>
                         <p>myrtilles et pâtes d'amande</p>
