--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
@@ -85,7 +85,7 @@
                     <div class="card__text">
                         <div>
                             <h3>À la française</h3>
-                            <p>Cité Rouge</p>
+                            <p>Cité Rouge</p> 
                         </div>
                         <!-- icone coeur cliquable -->
                         <i class="far fa-heart"></i>
