--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
@@ -25,9 +25,9 @@
                 <i class="far fa-heart"></i>
             </div>
             <div class="menu">
-                <h2>Entrées</h2>
+                <h2>Entrées<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leur crème à la truffe</p>
@@ -36,7 +36,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Caviar osciètre</h3>
                         <p>Sur blini à la farine de blé noir</p>
@@ -45,7 +45,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Homard et espuma de potiron</h3>
                         <p>Mariné aux zestes d'orange</p>
@@ -54,7 +54,7 @@
                 </div>
                 </a>
                 <a href="#">
-                    <div class="menu__plat">
+                    <div class="menu__plat menu__plat--4">
                         <div class="menu__plat--choix">
                             <h3>Foie gras de canard cuit entier</h3>
                             <p>Confiture de figue et pain toasté</p>
@@ -64,9 +64,9 @@
                     </a>
             </div>
             <div class="menu">
-                <h2>Plats</h2>
+                <h2>Plats<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Noix de coquilles Saint-Jacques</h3>
                         <p>Sur lit de purée de céleri-rave</p>
@@ -75,7 +75,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
@@ -84,7 +84,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvage aux zestes de citron</p>
@@ -94,9 +94,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Desserts</h2>
+                <h2>Desserts<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Macaron noisette et chocolat</h3>
                         <p>Glace au caramel brun et sel de Guérande</p>
@@ -105,7 +105,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Baba au rhum revisité</h3>
                         <p>Avec son coulis de citron</p>
@@ -114,7 +114,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Tarte au citron meringuée</h3>
                         <p>Déstructurée</p>
