--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
@@ -24,9 +24,9 @@
                 <i class="far fa-heart"></i>
             </div>
             <div class="menu">
-                <h2>Entrées</h2>
+                <h2>Entrées<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'Espelette</p>
@@ -35,7 +35,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
@@ -44,7 +44,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -54,9 +54,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Plats</h2>
+                <h2>Plats<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
@@ -65,7 +65,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>À la truffe noire sur sa purée de panais</p>
@@ -74,7 +74,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
@@ -84,9 +84,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Desserts</h2>
+                <h2>Desserts<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
@@ -95,7 +95,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
@@ -104,7 +104,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Mousse au chocolat</h3>
                         <p>Au piment d'Espelette et à la truffe noire</p>
