--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="sass/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
@@ -24,9 +24,9 @@
                 <i class="far fa-heart"></i>
             </div>
             <div class="menu">
-                <h2>Entrées</h2>
+                <h2>Entrées<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Tartare de thon</h3>
                         <p>Assaisonné au yuzu</p>
@@ -35,7 +35,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Bouchée de homard croustillant </h3>
                         <p>Et sa farandole de petits légumes</p>
@@ -44,7 +44,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Velouté de cèpes </h3>
                         <p>Aux truffes</p>
@@ -54,9 +54,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Plats</h2>
+                <h2>Plats<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Poulet rôti aux herbes de Provence </h3>
                         <p>Et sa crème de truffe</p>
@@ -65,7 +65,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison</p>
@@ -74,7 +74,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Côte de boeuf Angus</h3>
                         <p>Et sa purée de panais</p>
@@ -84,9 +84,9 @@
                 </a>
             </div>
             <div class="menu">
-                <h2>Desserts</h2>
+                <h2>Desserts<br /><span></span></h2>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--1">
                     <div class="menu__plat--choix">
                         <h3>Farandole de desserts</h3>
                         <p>Du chef</p>
@@ -95,7 +95,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--2">
                     <div class="menu__plat--choix">
                         <h3>Crème brulée</h3>
                         <p>Revisitée</p>
@@ -104,7 +104,7 @@
                 </div>
                 </a>
                 <a href="#">
-                <div class="menu__plat">
+                <div class="menu__plat menu__plat--3">
                     <div class="menu__plat--choix">
                         <h3>Tiramisu </h3>
                         <p>À la noisette</p>
