optimisation du coeur, loader, debut anim plat

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <!-- effet de remplissage progressif sur l'étoile                        ???-->
                         <!-- condition si clique etoile vide alors fonction remplissage du coeur
                             sinon coeur vide ??? -->
-                        <i class="vide far fa-heart"></i>
-                        <i class="plein fas fa-heart"></i>
+                        <i class="card__text--vide far fa-heart"></i>
+                        <i class="card__text--plein fas fa-heart"></i>
                     </div>
                 </a>
             </div>
@@ -97,7 +97,8 @@
                         </div>
                         <!-- icone coeur cliquable -->
 
-                        <i class="heart far fa-heart"></i>
+                        <i class="card__text--vide far fa-heart"></i>
+                        <i class="card__text--plein fas fa-heart"></i>
                     </div>
                 </a>
             </div>
@@ -110,7 +111,8 @@
                             <p>Cité Rouge</p> 
                         </div>
                         <!-- icone coeur cliquable -->
-                        <i class="heart far fa-heart"></i>
+                        <i class="card__text--vide far fa-heart"></i>
+                        <i class="card__text--plein fas fa-heart"></i>
                     </div>
                 </a>
             </div>
@@ -124,7 +126,8 @@
                         </div>
                         <!-- icone coeur cliquable -->
 
-                        <i class="heart far fa-heart"></i>
+                        <i class="card__text--vide far fa-heart"></i>
+                        <i class="card__text--plein fas fa-heart"></i>
                     </div>
                 </a>
             </div>
