--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -22,7 +22,8 @@
         <div class="section__hors-img">
             <div class="section__titre">
                 <h1>La note enchantée</h1>
-                <i class="far fa-heart"></i>
+                <i class="card__text--vide far fa-heart"></i>
+                <i class="card__text--plein fas fa-heart"></i>
             </div>
             <div class="menu">
                 <h2>Entrées<br /><span></span></h2>
