--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -21,7 +21,8 @@
         <div class="section__hors-img">
             <div class="section__titre">
                 <h1>À la française</h1>
-                <i class="far fa-heart"></i>
+                <i class="card__text--vide far fa-heart"></i>
+                <i class="card__text--plein fas fa-heart"></i>
             </div>
             <div class="menu">
                 <!-- titre de menu et trait       ???? -->
@@ -33,6 +34,7 @@
                         <p>Aux zests d'orange</p>
                     </div>
                     <p>25€</p>
+                    <i class="fas fa-check-circle"></i>
                 </div>
                 </a>
                 <a href="#">
