--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -21,7 +21,8 @@
         <div class="section__hors-img">
             <div class="section__titre">
                 <h1>À la française</h1>
-                <i class="far fa-heart"></i>
+                <i class="card__text--vide far fa-heart"></i>
+                <i class="card__text--plein fas fa-heart"></i>
             </div>
             <div class="menu">
                 <h2>Entrées<br /><span></span></h2>
