--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header-page">
-            <a href="index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
+            <a href="index.html" class="header-page--return"><i class="fas fa-arrow-left"></i></a>
             <a href="#"><img src="assets/img/ohmyfood@2x.svg" alt="logo Oh my food"></a>
     </header>
     <section class="section">
@@ -24,7 +24,7 @@
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
-            <div class="menu">
+            <div class="menu menu--1">
                 <!-- titre de menu et trait       ???? -->
                 <h2>Entrées<br /><span></span></h2>
                 <a href="#">
@@ -65,7 +65,7 @@
                 </div>
                 </a>
             </div>
-            <div class="menu">
+            <div class="menu menu--2">
                 <h2>Plats<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
@@ -104,7 +104,7 @@
                 </div>
                 </a>
             </div>
-            <div class="menu">
+            <div class="menu menu--3">
                 <h2>Desserts<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
