--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -25,7 +25,7 @@
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
-            <div class="menu">
+            <div class="menu menu--1">
                 <h2>Entrées<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
@@ -76,7 +76,7 @@
                     </div>
                     </a>
             </div>
-            <div class="menu">
+            <div class="menu menu--2">
                 <h2>Plats<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
@@ -115,7 +115,7 @@
                 </div>
                 </a>
             </div>
-            <div class="menu">
+            <div class="menu menu--3">
                 <h2>Desserts<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
