--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -24,7 +24,7 @@
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
-            <div class="menu">
+            <div class="menu menu--1">
                 <h2>Entrées<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
@@ -63,7 +63,7 @@
                 </div>
                 </a>
             </div>
-            <div class="menu">
+            <div class="menu menu--2">
                 <h2>Plats<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
@@ -102,7 +102,7 @@
                 </div>
                 </a>
             </div>
-            <div class="menu">
+            <div class="menu menu--3">
                 <h2>Desserts<br /><span></span></h2>
                 <a href="#">
                 <div class="menu__plat menu__plat--1">
