--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS -->
+
     <link rel="stylesheet" type="text/css" href="public/css/styles.css">
 
-    <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
-
-    <!-- MEDIA QUERIES -->
-
-
+    
     <title>Oh My Food</title>
 </head>
 <body>
-   
-
-        <!-- LOADER -->
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------LOADER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
         <div class="section-loader">
             <i class="alim alim--1 fas fa-utensils"></i>
             <i class="alim alim--2 fas fa-mortar-pestle"></i>
@@ -30,7 +26,9 @@
             <span class="lettre lettre--7">d</span>
         </div>
  <div class="bloc">
-        <!-- HEADER -->
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------HEADER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
         <header class="header">
             <div class="header__logo">
                 <a href="#"><img src="assets/img/ohmyfood@2x.svg" alt="logo Oh my food"></a>
@@ -64,7 +62,9 @@
             </nav>
         </header>
         
-        <!-- SECTION -->
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------SECTION----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
         <section id="restaurants">
             <h2>Restaurants</h2>
             <div class="card card--1">
@@ -128,7 +128,9 @@
             </div>
         </section>
 
-        <!-- FOOTER -->
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------FOOTER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
         <footer>
             <img src="./assets/img/ohmyfood@2x.svg" alt="logo du site en blanc">
             <div class="contact">
