--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -9,14 +9,20 @@
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
-    <!--  restaurant ou menu                      ??? -->
-    <title>Restaurant La note enchantée</title>
+
+    <title>La note enchantée</title>
 </head>
 <body>
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------HEADER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- --> 
     <header class="header-page">
             <a href="index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
             <a href="#"><img src="assets/img/ohmyfood@2x.svg" alt="logo Oh my food"></a>
     </header>
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------SECTION----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
     <section class="section">
         <img src="./assets/img/noteEnchantee.jpg" alt="Plat à la note enchantée">
         <div class="section__hors-img">
@@ -26,6 +32,8 @@
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
             <div class="menuu">
+                    <!-- ENTREES -->
+                <!-- ------------------- -->
                 <div class="menu menu--1">
                     <h2>Entrées<br /><span></span></h2>
                     <a href="#">
@@ -77,6 +85,8 @@
                         </div>
                     </a>
                 </div>
+                    <!-- PLATS -->
+                <!-- ------------------- -->
                 <div class="menu menu--2">
                     <h2>Plats<br /><span></span></h2>
                     <a href="#">
@@ -116,6 +126,8 @@
                         </div>
                     </a>
                 </div>
+                    <!-- DESSERTS -->
+                <!-- ------------------- -->
                 <div class="menu menu--3">
                     <h2>Desserts<br /><span></span></h2>
                     <a href="#">
@@ -159,7 +171,9 @@
         <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
-
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------FOOTER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
     <footer class="footer">
         <img src="./assets/img/ohmyfood@2x.svg" alt="logo du site en blanc">
         <div class="contact">
