--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -9,13 +9,20 @@
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/205d2d4b64.js" crossorigin="anonymous"></script>
-    <title>Restaurant À la française</title>
+    
+    <title>À la française</title>
 </head>
 <body>
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------HEADER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->    
     <header class="header-page">
             <a href="index.html" class="header-page--return"><i class="fas fa-arrow-left"></i></a>
             <a href="#"><img src="assets/img/ohmyfood@2x.svg" alt="logo Oh my food"></a>
     </header>
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------SECTION----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
     <section class="section">
         <img src="./assets/img/laFrancaise.jpg" alt="Plat à la française">
         <div class="section__hors-img">
@@ -25,8 +32,9 @@
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
             <div class="menuu">
+                    <!-- ENTREES -->
+                <!-- ------------------- -->
                 <div class="menu menu--1">
-                    <!-- titre de menu et trait       ???? -->
                     <h2>Entrées<br /><span></span></h2>
                     <a href="#">
                     <div class="menu__plat menu__plat--1">
@@ -38,7 +46,6 @@
                         <div class="menu__plat--coche">
                             <i class="test fas fa-check-circle"></i>
                         </div>
-                        
                     </div>
                     </a>
                     <a href="#">
@@ -66,6 +73,8 @@
                     </div>
                     </a>
                 </div>
+                    <!-- PLATS -->
+                <!-- ------------------- -->
                 <div class="menu menu--2">
                     <h2>Plats<br /><span></span></h2>
                     <a href="#">
@@ -105,6 +114,8 @@
                     </div>
                     </a>
                 </div>
+                    <!-- DESSERTS -->
+                <!-- ------------------- -->
                 <div class="menu menu--3">
                     <h2>Desserts<br /><span></span></h2>
                     <a href="#">
@@ -148,7 +159,9 @@
             <div class="commander"><a href="#" class="header__slogan--explore">Commander</a></div>
         </div>
     </section>
-
+        <!-- ----------------------------------------------------------------------------------- -->
+            <!-- -----------------------------------FOOTER----------------------------------- -->
+        <!-- ----------------------------------------------------------------------------------- -->
     <footer class="footer">
         <img src="./assets/img/ohmyfood@2x.svg" alt="logo du site en blanc">
         <div class="contact">
