--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -28,8 +28,11 @@
         <div class="section__hors-img">
             <div class="section__titre">
                 <h1>À la française</h1>
-                <i class="card__text--vide far fa-heart"></i>
-                <i class="card__text--plein fas fa-heart"></i>
+                
+                <div class="card__text--heart">
+                    <i class="card__text--vide far fa-heart"></i>
+                    <i class="card__text--plein fas fa-heart"></i>
+                </div>
             </div>
             <div class="menuu">
                     <!-- ENTREES -->
