--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -28,8 +28,10 @@
         <div class="section__hors-img">
             <div class="section__titre">
                 <h1>La palette du goût</h1>
-                <i class="card__text--vide far fa-heart"></i>
-                <i class="card__text--plein fas fa-heart"></i>
+                <div class="card__text--heart">
+                    <i class="card__text--vide far fa-heart"></i>
+                    <i class="card__text--plein fas fa-heart"></i>
+                </div>
             </div>
             <div class="menuu">
                     <!-- ENTREES -->
